--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <p>Bora jogar vôlei hj?</p>
+        <p>Isso é uma proposta Irrecusável?</p>
         <div class="buttons-container">
             <button><a href="https://www.youtube.com/watch?v=a8c5wmeOL9o">Sim</a></button>
             <button id="no">Não</button>
