Abrir vídeo em nova página

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="box mx-auto d-flex">
             <p class="">Isso é uma proposta Irrecusável?</p>
             <div class="buttons-container col-12 btn-white">
-                <a href="https://www.youtube.com/watch?v=a8c5wmeOL9o" class="btn btn-light" id="btnLink">Sim</a>
+                <a href="https://www.youtube.com/watch?v=a8c5wmeOL9o" class="btn btn-light" id="btnLink" target="_blank">Sim</a>
                 <a class="btn btn-light" id="no">Não</a>
             </div>
         </div>
